--- a/sub-pages/perfil.html
+++ b/sub-pages/perfil.html
@@ -18,9 +18,9 @@
             <div class="menu-icon" aria-label="Menu">&#9776;</div>
             <ul>
                 <div class="logo">
-                    <a href="/home.html"><img src="/assets/img/logo.png" alt="Logo" class="logo-img"></a>
+                    <a href="../home.html"><img src="/assets/img/logo.png" alt="Logo" class="logo-img"></a>
                 </div>
-                <li><a href="/home.html">Home</a></li>
+                <li><a href="../home.html">Home</a></li>
                 <li><a href="/quem-somos.html">Quem Somos</a></li>
                 <li class="dropdown">
                     <a href="/produtos.html">Produtos</a>
@@ -30,7 +30,7 @@
                         <a href="/produtos/marcas.html">Marcas</a>
                     </div>
                 </li>
-                <li><a href="/home.html" id="login-btn">Sair</a></li>
+                <li><a href="../home.html" id="login-btn">Sair</a></li>
                 <li><a href="/carrinho.html" id="carrinho-btn">
                         <i class="fas fa-shopping-cart"></i>
                         (<span id="carrinho-quantidade">0</span>)
