--- a/sub-pages/carrinho.html
+++ b/sub-pages/carrinho.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Entre em contato conosco. Estamos aqui para ajudar.">
-    <meta name="keywords" content="instrumentos musicais, contato, fale conosco">
+    <meta name="description" content="Revise os produtos escolhidos no seu carrinho de compras.">
+    <meta name="keywords" content="instrumentos musicais, carrinho de compras, e-commerce">
     <meta name="author" content="Nome da Loja">
-    <title>Fale Conosco | Loja de Instrumentos Musicais</title>
-    <link rel="stylesheet" href="/assets/css/fale-conosco.css">
+    <title>Carrinho de Compras | Loja de Instrumentos Musicais</title>
+    <link rel="stylesheet" href="/assets/css/carrinho.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 
@@ -18,9 +18,9 @@
             <div class="menu-icon" aria-label="Menu">&#9776;</div>
             <ul>
                 <div class="logo">
-                    <a href="/home.html"><img src="/assets/img/logo.png" alt="Logo" class="logo-img"></a>
+                    <a href="../home.html"><img src="/assets/img/logo.png" alt="Logo" class="logo-img"></a>
                 </div>
-                <li><a href="/home.html">Home</a></li>
+                <li><a href="../home.html">Home</a></li>
                 <li><a href="/quem-somos.html">Quem Somos</a></li>
                 <li class="dropdown">
                     <a href="/produtos.html">Produtos</a>
@@ -40,33 +40,44 @@
     </header>
 
     <main>
-        <section class="fale-conosco">
-            <h1>Fale Conosco</h1>
-            <p class="p">Se você tiver alguma dúvida, sugestão ou comentário, não hesite em nos contatar. Estamos aqui
-                para
-                ajudar!</p>
+        <section class="banner">
+            <h1>Bem-vindo à Loja de Instrumentos Musicais</h1>
+            <p>Compre com confiança! Garantimos a segurança das suas informações pessoais e financeiras durante todas as
+                etapas da compra.</p>
+        </section>
 
-            <form id="form-contato">
-                <label for="nome">Nome:</label>
-                <input type="text" id="nome" name="nome" required>
+        <section class="propaganda">
+            <a href="produtos.html" style="color: black;">
+                <h2 class="promo">Continue Comprando!</h2>
+            </a>
+            <p class="promo1"> Descontos incríveis em todos os produtos. Aproveite agora!</p>
+        </section>
 
-                <label for="email">E-mail:</label>
-                <input type="email" id="email" name="email" required>
-
-                <label for="assunto">Assunto:</label>
-                <input type="text" id="assunto" name="assunto" required>
-
-                <label for="mensagem">Mensagem:</label>
-                <textarea id="mensagem" name="mensagem" rows="5" required></textarea>
-
-                <button type="submit">Enviar</button>
-            </form>
-
-            <div class="info-contato">
-                <h2>Informações de Contato</h2>
-                <p><strong>Endereço:</strong> Rua dos Instrumentos, 123, Centro, Salvador, Bahia, Brasil</p>
-                <p><strong>Telefone:</strong> (71) 1234-5678</p>
-                <p><strong>E-mail:</strong> contato@lojadeinstrumentos.com.br</p>
+        <section class="carrinho">
+            <h1>Carrinho de Compras</h1>
+            <table>
+                <thead>
+                    <tr>
+                        <th>Produto</th>
+                        <th>Quantidade</th>
+                        <th>Preço Unitário</th>
+                        <th>Subtotal</th>
+                        <th>Ações</th>
+                    </tr>
+                </thead>
+                <tbody id="lista-carrinho">
+                </tbody>
+            </table>
+            <div class="calculo-frete">
+                <label for="cep">Calcular Frete:</label>
+                <input type="text" id="cep" placeholder="Digite seu CEP">
+                <button onclick="calcularFrete()">Calcular</button>
+                <p id="frete-valor">Frete: R$ 0,00</p>
+            </div>
+            <div class="total">
+                <p>Desconto: <span id="desconto">R$ 0,00</span></p>
+                <p>Total: <span id="total-valor">R$ 0,00</span></p>
+                <button onclick="finalizarCompra()">Finalizar Compra</button>
             </div>
         </section>
     </main>
@@ -88,7 +99,6 @@
                     <a href="/ajuda.html">Ajuda</a>
                 </div>
             </div>
-
 
             <div class="brands-section">
                 <div class="brands-logos">
@@ -164,7 +174,8 @@
     <script>
         new window.VLibras.Widget('https://vlibras.gov.br/app');
     </script>
-    <script src="/assets/js/script.js"></script>
+
+    <script src="/assets/js/carrinho.js"></script>
     <script src="/assets/js/login.js"></script>
 </body>
 
