--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
             <div class="menu-icon" aria-label="Menu">&#9776;</div>
             <ul>
                 <div class="logo">
-                    <a href="/home.html"><img src="/assets/img/logo.png" alt="Logo" class="logo-img"></a>
+                    <a href="/index.html"><img src="/assets/img/logo.png" alt="Logo" class="logo-img"></a>
                 </div>
-                <li><a href="/home.html">Home</a></li>
+                <li><a href="/index.html">Home</a></li>
                 <li><a href="/sub-pages/quem-somos.html">Quem Somos</a></li>
                 <li class="dropdown">
                     <a href="/sub-pages/produtos.html">Produtos</a>
