Mudanças nos links 2

--- a/sub-pages/produtos.html
+++ b/sub-pages/produtos.html
@@ -23,9 +23,9 @@
                     <a href="../index.html"><img src="/assets/img/logo.png" alt="Logo" class="logo-img"></a>
                 </div>
                 <li><a href="../index.html">Home</a></li>
-                <li><a href="/quem-somos.html">Quem Somos</a></li>
+                <li><a href="/sub-pages/quem-somos.html">Quem Somos</a></li>
                 <li class="dropdown">
-                    <a href="/produtos.html">Produtos</a>
+                    <a href="/sub-pages/produtos.html">Produtos</a>
                     <div class="dropdown-content">
                         <a href="/produtos/instrumentos.html">Instrumentos</a>
                         <a href="/produtos/acessorios.html">Acessórios</a>
@@ -33,7 +33,7 @@
                     </div>
                 </li>
                 <li><a href="#" id="login-btn">Login/Cadastro</a></li>
-                <li><a href="/carrinho.html" id="carrinho-btn">
+                <li><a href="/sub-pages/carrinho.html" id="carrinho-btn">
                         <i class="fas fa-shopping-cart"></i>
                         (<span id="carrinho-quantidade">0</span>)
                     </a></li>
@@ -244,9 +244,9 @@
                     </div>
                 </div>
                 <div class="footer-links">
-                    <a href="/fale-conosco.html">Fale Conosco</a>
-                    <a href="/faq.html">FAQ</a>
-                    <a href="/ajuda.html">Ajuda</a>
+                    <a href="/sub-pages/fale-conosco.html">Fale Conosco</a>
+                    <a href="/sub-pages/faq.html">FAQ</a>
+                    <a href="/sub-pages/ajuda.html">Ajuda</a>
                 </div>
             </div>
 
