--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="instrumentos musicais, guitarras, baixos, baterias, teclados, acessórios">
     <meta name="author" content="Nome da Loja">
     <title>Loja de Instrumentos Musicais | Instrumentos para Todos os Estilos</title>
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="../assets/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
